Issue #13706: Support non-ASCII fill characters